--- a/Counter/index.html
+++ b/Counter/index.html
@@ -7,12 +7,12 @@
     </head> 
 
     <body>
+        <h1>Counter</h1>
         <div>
-            <h1>Counter</h1>
             <h2 id = "Count">0</h2>
             <form>
                 <input id = "Add" type = "button" value = "+" onclick = "Increase()">
-                <input id = "Clear" type = "button" value = "RESET" onclick = "Reset()">
+                <input id = "Clear" type = "button" value = "CLEAR" onclick = "ClearCount()">
             </form>
         </div>
     </body>
