--- a/Todo List/index.html
+++ b/Todo List/index.html
@@ -5,29 +5,20 @@
         <script src = "functions.js"></script>
         <link rel = "stylesheet", href = "style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script>
-
-        </script>
     </head>
 
     <body>
         <div id = "Frame">
             <h1>To Do List</h1>
 
+            <div id = "Tasks"></div>
+            <div id = "FinishedTasks"></div>
+
             <form>
                 <input type = "text", id = "TaskInput">
                 <input type = "button", id = "TaskSubmit", value = "Add", onclick = "AddTask()">
                 <input type = "button", id = "TaskCleared", value = "Clear" onclick = "ClearList()">
-                
             </form>
-
-            <div id = "Tasks">
-
-            </div>
-
-            <div id = "FinishedTasks">
-
-            </div>
         </div>
     </body>
 </html>
